--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@ APP_KEY=base64:zDT6MStVCtvBw6i2RN0ykDwAJKt9DE8vvtCSxo6z9Ys=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=cs4540g1
+DB_USERNAME=cd4540g1
+DB_PASSWORD=Lafp45!
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
