Fixing .env typo

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=cs4540g1
-DB_USERNAME=cd4540g1
+DB_USERNAME=cs4540g1
 DB_PASSWORD=Lafp45!
 
 CACHE_DRIVER=file
