--- a/.env
+++ b/.env
@@ -24,3 +24,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+STRIPE_TEST_SECRET_KEY=sk_test_7hNsUs0JJxdwsmAfw6M1JJpL
+STRIPE_TEST_PUBLISHABLE_KEY=pk_test_OBVv0fqP04etHeyhw09B7bHJ
+STRIPE_LIVE_SECRET_KEY=sk_live_xW3mvN2CflD2PUose1pDFZQj
+STRIPE_LIVE_PUBLISHABLE_KEY=pk_live_9U8pWxr7BGzk65ACTDe4dAO8
