--- a/.env
+++ b/.env
@@ -19,10 +19,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
+MAIL_HOST=localhost
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=cs4540g1
+MAIL_PASSWORD=Lafp45!
 MAIL_ENCRYPTION=null
 
 STRIPE_TEST_SECRET_KEY=sk_test_7hNsUs0JJxdwsmAfw6M1JJpL
